<resources>
    <string name="app_name">Wattary</string>
    <string name="permission_message">This app needs mic to record audio and recognize your speech.</string>

    <string name="air_condition">Air Condition</string>
    <string name="temperature">Temperature</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="text_spl">Wattary\nConversational AI Agent</string>
    <string name="CH_Up">CH\n+</string>
    <string name="CH_Dn">CH\n-</string>
    <string name="Vol_Up">Vol\n+</string>
    <string name="Vol_Dn">Vol\n-</string>
    <string name="Reco_tv">recommended for you :</string>
    <string name="Sign_out_btn_string">Sign Out</string>
</resources>
